--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
        <p> Conte-nos como for nossa ajuda com sua solicitação. agradecemos muito seu feedback para podermos melhorar nosso atendimento </p>
 
-    <div class="notas">
+    <div class="botoes">
         <button>1</button>
         <button>2</button>
         <button>3</button>
