--- a/pages/agradecimento.html
+++ b/pages/agradecimento.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=agradecimento.css">
+   <link rel="stylesheet" href="agradecimento.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <title>feedback - agradecimento</title>
 </head>
 <body>
@@ -14,7 +17,7 @@
 
            <h1>Obrigado!</h1>
 
-           <P> Agradecemos por dedicar o momento para nos avaliar. Se precisar de mais suporte, não hesite em entrar em contato!</P>
+           <P>Agradecemos por dedicar o momento para nos avaliar. Se precisar de mais suporte, não hesite em entrar em contato!</P>
         </div>
 </body>
 </html>
